implemented rotary position embeddings and label smoothing

--- a/transformer/src/run/main.ipynb
+++ b/transformer/src/run/main.ipynb
@@ -294,7 +294,8 @@
         "    num_decoder_layers=NUM_DECODER_LAYERS,\n",
         "    dim_feedforward=DIM_FEEDFORWARD,\n",
         "    dropout=DROPOUT,\n",
-        "    max_len=MAX_SEQ_LEN\n",
+        "    max_len=MAX_SEQ_LEN,\n",
+        "    use_rope=True\n",
         ").to(DEVICE)\n",
         "\n",
         "num_params = sum(p.numel() for p in model.parameters())\n",
@@ -335,7 +336,7 @@
         "    warmup_steps=WARMUP_STEPS\n",
         ")\n",
         "\n",
-        "criterion = nn.CrossEntropyLoss(ignore_index=PAD_IDX)\n",
+        "criterion = nn.CrossEntropyLoss(ignore_index=PAD_IDX, label_smoothing=0.1)\n",
         "\n",
         "trainer = Trainer(\n",
         "    model=model,\n",
