--- a/transformer/src/run/main.ipynb
+++ b/transformer/src/run/main.ipynb
@@ -328,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "b889e2a4",
       "metadata": {},
       "outputs": [
@@ -360,13 +360,28 @@
         "\n",
         "criterion = nn.CrossEntropyLoss(ignore_index=PAD_IDX, label_smoothing=0.1)\n",
         "\n",
+        "wandb_config = {\n",
+        "    \"vocab_size\": VOCAB_SIZE,\n",
+        "    \"d_model\": D_MODEL,\n",
+        "    \"n_heads\": N_HEADS,\n",
+        "    \"num_encoder_layers\": NUM_ENCODER_LAYERS,\n",
+        "    \"num_decoder_layers\": NUM_DECODER_LAYERS,\n",
+        "    \"dim_feedforward\": DIM_FEEDFORWARD,\n",
+        "    \"batch_size\": BATCH_SIZE,\n",
+        "    \"epochs\": EPOCHS,\n",
+        "    \"use_rope\": True\n",
+        "}\n",
+        "\n",
         "trainer = Trainer(\n",
         "    model=model,\n",
         "    optimizer=optimizer,\n",
         "    criterion=criterion,\n",
         "    scheduler=scheduler,\n",
         "    device=DEVICE,\n",
-        "    grad_clip=GRAD_CLIP\n",
+        "    grad_clip=GRAD_CLIP,\n",
+        "    use_wandb=True,  \n",
+        "    wandb_project=\"ImplementingTransformers\",\n",
+        "    wandb_config=wandb_config\n",
         ")\n",
         "\n",
         "os.makedirs(os.path.dirname(CHECKPOINT_PATH), exist_ok=True)\n",
