implemented swiglu FFN

--- a/transformer/src/run/main.ipynb
+++ b/transformer/src/run/main.ipynb
@@ -271,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "6b9155e8",
       "metadata": {},
       "outputs": [
@@ -295,7 +295,8 @@
         "    dim_feedforward=DIM_FEEDFORWARD,\n",
         "    dropout=DROPOUT,\n",
         "    max_len=MAX_SEQ_LEN,\n",
-        "    use_rope=True\n",
+        "    use_rope=True,\n",
+        "    use_swiglu=True\n",
         ").to(DEVICE)\n",
         "\n",
         "num_params = sum(p.numel() for p in model.parameters())\n",
